...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/mpsdk_color_congrats_background">

                    <ImageView
                        android:id="@+id/mpsdkIcon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="14dp"
                        android:layout_gravity="center_horizontal"
                        android:tint="@color/mpsdk_color_congrats_image"
                        android:src="@drawable/icon_ok" />

                    <com.mercadopago.views.MPTextView
                        android:id="@+id/mpsdkCongratulationsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="bottom|center"
                        android:textSize="22dp"
                        android:text="@string/mpsdk_title_activity_congrat"/>

                    <com.mercadopago.views.MPTextView
                        android:id="@+id/mpsdkCongratulationSubtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:gravity="bottom|center"
                        android:textSize="15dp"
                        android:text="@string/mpsdk_subtitle_action_activity_congrat"/>

                    <com.mercadopago.views.MPTextView
                        android:id="@+id/mpsdkPayerEmailDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
...
                            android:layout_marginTop="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/mpsdkPaymentMethodImage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:src="@drawable/visa"
                                android:maxHeight="13dp"
                                android:adjustViewBounds="true"
                                android:layout_gravity="center_vertical"/>

                            <com.mercadopago.views.MPTextView
                                android:id="@+id/mpsdkLastFourDigitsDescription"
                                android:layout_marginLeft="10dp"
                                android:layout_marginStart="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:textSize="18dp"
                                android:layout_gravity="center_vertical"
                                android:text="@string/mpsdk_last_digits_label"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:layout_marginBottom="7dp"
                            android:orientation="horizontal">

                            <com.mercadopago.views.MPTextView
                                android:id="@+id/mpsdkInstallmentsDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="bottom"
                                android:textSize="23dp"
                                android:textColor="@color/mpsdk_color_congrats_installments"
                                android:text="12 de $80 00"/>

                            <com.mercadopago.views.MPTextView
                                android:id="@+id/mpsdkInterestAmountDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:gravity="bottom"
                                android:textSize="16dp"
                                android:textColor="@color/mpsdk_color_congrats_interest"
                                android:text="@string/mpsdk_zero_rate"/>
                        </LinearLayout>

                            <com.mercadopago.views.MPTextView
                                android:id="@+id/mpsdkStateDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="bottom"
                                android:textSize="16dp"
                                android:text="@string/mpsdk_text_state_acount_activity_congrat"/>
                    </LinearLayout>
                    <View
                        android:id="@+id/mpsdkPaymentIdSeparator"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/mpsdk_separator"
...
