...
                        android:text="@string/mpsdk_payment_id_description"
                        android:textSize="22dp"
                        android:textColor="@color/default_primary_color"
                        android:visibility="visible" />

                    <com.mercadopago.customviews.MPTextView
                        android:id="@+id/mpsdkPaymentIdDescriptionNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingTop="2dp"
                        android:textSize="14dp"
...
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginTop="20dp"
                        android:background="@color/mpsdk_separator"
                        android:visibility="visible" />

                    <com.mercadopago.customviews.MPTextView
                        android:id="@+id/mpsdkPayerEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
...
