...
    <string name="mpsdk_card_issuers_title">Which is your bank?</string>

    <!-- Installments -->
    <string name="mpsdk_card_installments_title">How many installments?</string>
    <string name="mpsdk_installments_of">of</string>

    <string name="mpsdk_installments_by">x</string>
    <string name="mpsdk_installments_tea">TEA</string>
    <string name="mpsdk_installments_cft" >CFT</string>


    <!-- Checkout -->
    <string name="mpsdk_text_terms_and_conditions_start">By paying, I claim to be an adult and that I accept the</string>
...

    <!-- Congrats -->
    <string name="mpsdk_title_approved_payment">Done! Your payment was accredited</string>
    <string name="mpsdk_subtitle_action_activity_congrats">We will send you the data to\n%1$s</string>
    <string name="mpsdk_text_state_account_activity_congrats">On your statement you will see the charge as\n %s</string>
    <string name="mpsdk_payment_id_description">Ticket</string>
    <string name="mpsdk_payment_id_description_number">Nº %1$s</string>
    <string name="mpsdk_statement_default">MERCADO PAGO</string>
    <string name="mpsdk_account_money">Account money</string>
    <string name="mpsdk_ending_in">ending in</string>
    <string name="mpsdk_receipt">Transaction number %1$s</string>
    <string name="mpsdk_date_divider">of</string>

...
